*** netmeta, version 0.9-3, 2017-mm-dd ***

 ** Major changes **
 
  * Calculate indirect treatment estimates

 ** User-visible changes **
    
  * New arguments random and tau.preset in netmeasures()


*** netmeta, version 0.9-2, 2016-11-19 ***

 ** Major changes **

  * R package rgl moved from imported to suggested packages as
    - 3-D network plots are not essential for network meta-analysis
    - installation of netmeta package breaks under Mac OS if XQuartz
      is not available
    
 ** User-visible changes **
    
  * Help page of netgraph() updated (information on rgl package)

 ** Internal changes **

  * Use chkclass() from meta package to check for class membership


*** netmeta, version 0.9-1, 2016-10-13 ***

 ** Major changes **

  * Number of studies can be added to network graph

  * Distance matrix can be provided directly to generate network graph
  
  * shadowtext() from TeachingDemos package by Greg Snow added to
    netmeta package

  * P-scores can be printed in forest plot
  
 ** User-visible changes **
    
  * help page with brief overview of netmeta package added

  * netgraph():
    - new arguments to add number of studies to network graph
      (number.of.studies, cex.number.of.studies,
      col.number.of.studies, bg.number.of.studies)     
    - plastic look retained for highlighted comparisons
    - new argument D.matrix to provide treatment distances directly

  * netmeta():
    - function can be used with a single pairwise comparison without
      resulting in an error

  * forest.netmeta():
    - argument sortvar can be equal to Pscore, "Pscore", -Pscore, or
      "-Pscore" to sort treatments according to ranking generated by
      netrank()
    - argument leftcols or rightcols can include "Pscore" to add a
      column with P-Scores to the forest plot
    - new arguments small.values and digits.Pscore for P-Scores

  * print.netmeta():
    - use correct layout for network meta-analysis with a single
      pairwise comparison
